# ml_final_project

./: Argote_Mariajose_CML_2025.ipynb  Argote_Mariajose_CML_2025_WORKING.ipynb  LICENSE  argote_mariajose_CML_2025.csv  argote_mariajose_CML_2025_20251210_235829.csv  argote_mariajose_CML_2025_20251211_000057.csv  argote_mariajose_CML_2025_20251211_000319.csv  argote_mariajose_CML_2025_20251211_000710.csv  argote_mariajose_CML_2025_20251211_002015.csv  diagnosis_state.pkl  final_model.pkl  main.py  mimic_prd_UPDATED.md  mimic_prd_argote.md  mimic_prd_pipeline.ipynb  preprocessing_state.pkl  pyproject.toml  submission_log.txt
MIMIC III dataset HEF/: garcia_joan_CML_2025.csv
OLD/: Argote_Mariajose_CML_IAHelp.ipynb  build_full_notebook.py  build_fullstack_notebook.py  build_notebook.py
csv_submissions/: argote_mariajose_CML_2025_1.csv  argote_mariajose_CML_2025_20251210_200834.csv  argote_mariajose_CML_2025_20251210_201852.csv  argote_mariajose_CML_2025_20251210_201940.csv  argote_mariajose_CML_2025_20251210_202249.csv  argote_mariajose_CML_2025_20251210_210519.csv  argote_mariajose_CML_2025_20251210_210654.csv  argote_mariajose_CML_2025_20251210_210812.csv  argote_mariajose_CML_2025_20251210_211052.csv  argote_mariajose_CML_2025_20251210_211152.csv  argote_mariajose_CML_2025_20251210_212315.csv  argote_mariajose_CML_2025_20251210_212430.csv  argote_mariajose_CML_2025_20251211_000607.csv  argote_mariajose_CML_2025_20251211_000837.csv  argote_mariajose_CML_2025_20251211_005747.csv  argote_mariajose_CML_2025_20251211_005945.csv  argote_mariajose_CML_2025_20251211_010637.csv  (+2 more)
